grammar.js
    source_file: $ => repeat(
      choice(
        $.psql_statement,
        seq($._statement, ";")
      ),
    ),

    _statement: $ => choice(
      $.psql_statement,
      $.create_function_statement,
      $.drop_function_statement,
      $.create_table_statement,
      $.create_schema_statement,
      $.create_type_statement,
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.grant_statement,
      $.create_trigger_statement,
      $.create_sequence_statement,
      $.create_index_statement,
      $.alter_table_statement,
      $.do_block,
    ),

    _plpgsql_statement: $ => seq(
      choice(
        $._statement,
        $.assign_statement,
        $.get_diagnostics_statement,
        $.return_statement,
        $.raise_statement,
        $.if_statement,
        $.for_statement,
        $.execute_statement,
        $.perform_statement,
      ),
      ";",
    ),

    raise_statement: $ => seq(
      kw("raise"),
      optional(seq(
        optional($.identifier),
        $.string, 
        optional(seq(",", commaSep($._value_expression)))
      )),
    ),

    execute_statement: $ => seq(
      kw("execute"),
      $._value_expression,
      optional($.into),
      optional($.execute_using),
    ),
    execute_using: $ => seq(kw("using"), commaSep1($._value_expression)),
    assign_statement: $ => seq($.identifier, choice("=", ":="), $._value_expression),
    return_statement: $ => seq(kw("return"), choice(
      seq(kw("query"), $.select_statement),
      seq(kw("query"), $.execute_statement),
      $._value_expression),
    ),
    perform_statement: $ => seq(kw("perform"), commaSep($.select_item)),

    do_block: $ => seq(
      kw("do"),
      $.block,
    ),

    select_statement: $ => prec.left(seq(
      optional($.with_query),
      kw("select"),
      commaSep($.select_item),
      optional($.into),
      optional($.select_from),
      optional($.select_where),
      optional($.select_group_by),
      optional($.select_having),
      optional($.select_order_by),
      optional($._select_limit_offset),
      optional($.into),
    )),

    into: $ => seq(kw("into"), optional(kw("strict")), commaSep1($.identifier)),
    _select_limit_offset: $ => choice(
      seq($.select_limit, optional($.select_offset)),
      seq($.select_offset, optional($.select_limit)),
    ),
    select_item: $ => seq(
      $._value_expression,
      optional(kw("as")),
      optional($.identifier)
    ),
    select_from: $ => seq(kw("from"), commaSep1($.from_item)),
    from_item: $ => prec.left(seq(
      // TODO(chrde): https://www.postgresql.org/docs/current/sql-select.html
      choice(
        $.from_select,
        $.from_table,
        $.from_function,
      ),
      repeat($.join_item),
    )),
    from_table: $ => seq($.identifier, optional(kw("as")), optional($.identifier)),
    join_item: $ => prec.left(choice(
      seq(kw("natural"), $.join_type, $.from_item),
      seq($.join_type, $.from_item, $.join_condition),
      seq(kw("cross"), kw("join"), $.from_item)
    )),
    join_condition: $ => choice(
      seq(kw("on"), $._value_expression),
      seq(kw("using"), $._list_of_identifiers)
    ),
    join_type: $ => seq(
      choice(
        optional(kw("inner")),
        seq(kw("left"), optional(kw("outer"))),
        seq(kw("right"), optional(kw("outer"))),
        seq(kw("full"), optional(kw("outer"))),
      ),
      kw("join")
    ),

    block: $ => seq(
      $.dollar_quote,
      repeat($.declarations),
      $.body,
      $.dollar_quote,
    ),

    body: $ => seq(
      kw("begin"),
      repeat($._plpgsql_statement),
      kw("end"),
      optional(";"),
    ),

    dollar_quote: $ => seq("$", optional($.identifier), "$"),

    declarations: $ => seq(
      kw("declare"),
      repeat($.var_definition),
    ),

    var_definition: $ => seq(
      $.var_declaration,
      optional(seq(":=", $._value_expression)),
      ";",
    ),

    var_declaration: $ => seq(
      field("name", $.identifier),
      field("type", $._type),
    ),

    _type: $ => seq(
      choice($.predefined_types, $.identifier),
      optional(choice(
        repeat1(seq("[", "]")),
        kw("%rowtype"),
        kw("%type")))
    ),

// predefined_type:
//   | BIGINT { BigInt }
//   | BIT VARYING? l = type_length? { BitVarying(l) }
//   | BOOLEAN { Boolean }
//   | CHAR VARYING? l = type_length? { Char(l) }
//   | CHARACTER VARYING? l = type_length? { Char(l) }
//   | DEC p = precision_param? { Dec(p) }
//   | DECIMAL p = precision_param? { Decimal(p) }
//   | DOUBLE PRECISION { Double }
//   | FLOAT p = precision_param? { Float(p) }
//   | INT { Int }
//   | INTEGER { Integer }
//   | INTERVAL interval = interval_field? l = type_length? { Interval(interval, l) }
//   | NCHAR VARYING? l = type_length? { Nchar(l) }
//   | NUMERIC p = precision_param? { Numeric(p) }
//   | REAL { Real }
//   | SMALLINT { SmallInt }
//   | TEXT { Text }
//   (* | TIME l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIME l = type_length? WITH TIME ZONE { TimeTz(l) }
//   | TIME l = type_length? WITHOUT TIME ZONE { Time(l) }
//   (* | TIMESTAMP l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIMESTAMP l = type_length? WITH TIME ZONE { TimestampTz(l) }
//   | TIMESTAMPTZ l = type_length? { TimestampTz(l) }
//   | TIMESTAMP l = type_length? WITHOUT TIME ZONE { Timestamp(l) }
//   | VARCHAR l = type_length? { VarChar(l) }
//   (* | schema_qualified_name_nontype (LEFT_PAREN vex (COMMA vex)* RIGHT_PAREN)? *)
    // TODO(chrde): moar types!!
    string: $ => seq(
      "'",
      repeat(choice(
        prec(1, /''/),
        prec(2, /[^']/),
      )),
       "'",
    ),

    // NOTE(chrde): taken from https://github.com/tree-sitter/tree-sitter-javascript/blob/1ddbf1588c353edab37791cdcc9f17e56fb4ea73/grammar.js#L899
    _value_expression: $ => choice(
      $.number,
      $.dollar_quote_string,
      $.string,
      $.true,
      $.false,
      $.null,
      $.star,
      seq("(", $.select_statement, ")"),
      seq("(", commaSep1($._value_expression), ")"),
      $.function_call,
      $.array_constructor,
      $.op_expression,
      $.time_expression,
      // TODO(chrde): this one feels a bit hacky? perhaps move to identifier regexp
      seq($.identifier, ".", $.star),
      $.identifier,
    ),

    dollar_quote_string: $ => seq(
      "$", $._identifier, "$",
        /(([^$]+)|(%\d+\$s)|(\$\d+))+/,
        //                     ^
        //                     |- matches $1 (execute ... using placeholders)
        //           ^
        //           |- matches %d1s (format placeholders)
        //  ^
        //  |- matches anything other than $
      "$", $._identifier, "$",
    ),

    time_expression: $ => choice(
      seq($.identifier, kw("at"), kw("time"), kw("zone"), $._value_expression),
      // TODO(chrde): this is plain wrong - https://www.postgresql.org/docs/13/datatype-datetime.html
      seq(kw("interval"), $.string, optional($._interval_fields)),
    ),

    _interval_fields: $ => choice(
      kw("year"), kw("month"), kw("day"), kw("hour"), kw("minute"), kw("second"),
      seq(kw("year"), kw("to"), kw("month")),
      seq(kw("day"), kw("to"), kw("hour")),
      seq(kw("day"), kw("to"), kw("minute")),
      seq(kw("day"), kw("to"), kw("second")),
      seq(kw("hour"), kw("to"), kw("minute")),
      seq(kw("hour"), kw("to"), kw("second")),
      seq(kw("minute"), kw("to"), kw("second")),
    ),

    function_call: $ => seq(
      $.identifier,
      "(",
      choice(
        $.select_statement,
        commaSep($._value_expression),
      ),
      ")"
    ),

    op_expression: $ => choice(
      prec.left(12, seq($._value_expression, $.cast, $._type)),
      // array access
      prec.right(10, seq(choice($.minus, $.plus), $._value_expression)),
      // ^
      prec.left(8, seq($._value_expression, choice("*", "/", "%"), $._value_expression,)),
      prec.left(7, seq($._value_expression, choice("-", "+"), $._value_expression,)),
      prec.left(6, seq($._value_expression, $.other_op, $._value_expression)),
      prec.left(5, seq($._value_expression, $.contains_op, $._value_expression,)),
      prec.left(4, seq($._value_expression, $.comparison_op, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_kw, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_null)),
      prec.right(2, seq($.not, $._value_expression)),
      prec.left(1, seq($._value_expression, choice($.and, $.or), $._value_expression,)),
    ),

    _list_of_identifiers: $ => seq("(", commaSep($.identifier), ")"),

    // TODO(chrde): https://www.postgresql.org/docs/13/sql-syntax-lexical.html
    comparison_op: $ => choice("<", ">", "=", "<=", ">=", "<>", "!="),
    // TODO(chrde): is there a better name other than `contains_op`?
    contains_op: $ => choice(kw("between"), kw("in"), kw("like"), kw("ilike")),
    comparison_null: $ => choice(
      kw("is null"),
      kw("isnull"),
      kw("is not null"),
      kw("notnull"),
    ),
    other_op: $ => choice("||", "<@", "@>", "<<", ">>", "&&", "&<", "&>", "-|-"),
    cast: $ => "::",
    minus: $ => "-",
    and: $ => kw("and"),
    or: $ => kw("or"),
    true: $ => kw("true"),
    false: $ => kw("false"),
    null: $ => kw("null"),
    star: $ => "*",
    number: $ => /-?\d+/,
    identifier: $ => $._identifier,
    _identifier: $ => /[a-zA-Z0-9_]+(\.?[a-zA-Z0-9_]+)*/,
    //                                ^
    //                                |- we dont want to match consecutive dots, e.g: 1..2 consists of 3 tokens
  }
});
