corpus/plpgsql/raise_statement.txt
================================================================================
dummy
================================================================================
do $$ begin
raise;
end $$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (ERROR))
      (dollar_quote))))

================================================================================
basic
================================================================================
do $$ begin
raise 'alarms';
end $$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (raise_statement
          (string)))
      (dollar_quote))))

================================================================================
with level
================================================================================
do $$ begin
raise notice 'alarms';
end $$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (raise_statement
          (identifier)
          (string)))
      (dollar_quote))))

================================================================================
with level and args
================================================================================
do $$ begin
raise notice 'alarms %d', _foo, bar;
end $$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (raise_statement
          (identifier)
          (string)
          (identifier)
          (identifier)))
      (dollar_quote))))
