corpus/plpgsql/return_statement.txt
================================================================================
return
================================================================================
DO $$
BEGIN
    RETURN 1;
END
$$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (return_statement
          (number)))
      (dollar_quote))))

================================================================================
return query
================================================================================
DO $$
BEGIN
    RETURN QUERY select 1;
END
$$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (return_statement
          (select_statement
            (select_item
              (number)))))
      (dollar_quote))))
